--- a/frontend/src/assets/style/setup/vars.css
+++ b/frontend/src/assets/style/setup/vars.css
@@ -1,14 +1,13 @@
 :root {
-  --clr1: rgb(96, 107, 91);
-  --clr2: rgb(120, 99, 110);
+  --clr1: #f4f5f7;
+  --clr2: #253858;
 
-  --clr1bg: rgb(153, 166, 149);
+  --clr1bg: rgb(235, 245, 255);
   --clr1bg-light: rgb(205, 221, 200);
-  --clr2bg: rgb(233, 206, 221);
-  --clr2bg-light: rgb(253, 236, 246);
+  --clr2bg: #deebff;
+  --clr2bg-light: #253858;
 
   --gray1: rgb(240, 240, 240);
   --gray2: rgb(155, 155, 155);
   --gray3: rgb(44, 44, 44);
-
-} 
+}
