--- a/frontend/src/assets/style/base/base.css
+++ b/frontend/src/assets/style/base/base.css
@@ -16,8 +16,8 @@ h3,
 h4,
 h5,
 h6 {
-  margin: .5em 0 .5em;
-  font-family: 'Edu VIC WA NT Beginner', cursive;
+  margin: 0.5em 0 0.5em;
+  font-family: "Edu VIC WA NT Beginner", cursive;
 }
 
 p {
@@ -30,22 +30,29 @@ a {
   cursor: pointer;
 }
 
-
-
 /* Dont stretch my Media */
 img,
 embed,
 video,
 object {
-  max-width: 100%
+  max-width: 100%;
 }
 
 /* Simple and useful CSS Debugging Technique */
 .debug * {
-  outline: 1px solid gold
+  outline: 1px solid gold;
 }
 
-
 .about nav a {
-    margin-right: 10px;
+  margin-right: 10px;
+}
+
+dialog.dialog {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  padding: 20px;
+  border-radius: 4px;
+  background-color: white;
+  z-index: 99;
 }
