--- a/frontend/src/assets/style/cmps/BugList.css
+++ b/frontend/src/assets/style/cmps/BugList.css
@@ -1,15 +1,16 @@
 .bug-list {
-    padding: 15px 0 0;
-    list-style: none;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 15px;
+  padding: 15px 0 0;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 15px;
 }
 
 .bug-list li {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    background-color: var(--clr1bg);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgb(255 255 255);
+  box-shadow: #0000004a 1px 1px 5px;
 }
