--- a/frontend/src/assets/style/cmps/BugFilter.css
+++ b/frontend/src/assets/style/cmps/BugFilter.css
@@ -2,3 +2,18 @@ form {
   display: flex;
   gap: 5px;
 }
+
+.signup-form {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  input#imgUpload {
+    border: none;
+  }
+}
+
+.signup-form input {
+  border-radius: 4px;
+  border: 1px solid #0000002e;
+  padding: 5px;
+}
