--- a/frontend/src/assets/style/cmps/bugForm.css
+++ b/frontend/src/assets/style/cmps/bugForm.css
@@ -1,8 +1,7 @@
 .bug-form {
   display: flex;
   flex-direction: column;
-
-  label {
-    display: flex;
-  }
+}
+.bug-form label {
+  display: flex;
 }
