--- a/frontend/src/assets/style/cmps/BugFilter.css
+++ b/frontend/src/assets/style/cmps/BugFilter.css
@@ -7,11 +7,11 @@ form {
   display: flex;
   flex-direction: column;
   gap: 5px;
-  input#imgUpload {
-    border: none;
-  }
 }
 
+.signup-form input#imgUpload {
+  border: none;
+}
 .signup-form input {
   border-radius: 4px;
   border: 1px solid #0000002e;
