--- a/frontend/src/assets/style/cmps/BugList.css
+++ b/frontend/src/assets/style/cmps/BugList.css
@@ -1,4 +1,5 @@
-.bug-list {
+.bug-list,
+.user-list {
   padding: 15px 0 0;
   list-style: none;
   display: grid;
@@ -6,7 +7,8 @@
   gap: 15px;
 }
 
-.bug-list li {
+.bug-list li,
+.user-list li {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
