--- a/frontend/src/assets/style/cmps/BugPreview.css
+++ b/frontend/src/assets/style/cmps/BugPreview.css
@@ -1,16 +1,19 @@
-.bug-preview {
-    text-align: center;
-    padding: 0.3em;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.bug-preview,
+.user-preview {
+  text-align: center;
+  padding: 0.3em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.bug-preview h4 {
-    text-transform: capitalize;
-    color: black;
+.bug-preview h4,
+.user-preview h4 {
+  text-transform: capitalize;
+  color: black;
 }
 
-.bug-preview img {
-    max-width: 100px;
+.bug-preview img,
+.user-preview img {
+  max-width: 100px;
 }
